# columnar

./: .gitignore  README.md  algorithm.md  changelog.md  setup.cfg  setup.py
columnar/: __init__.py  columnar.py  exceptions.py  main.py
columnar/images/: emojis_and_wide_chars.png.license
columnar/test/: colors_justifications_headers.py  drop_dash_and_none_columns.py  example.py  four.py  lots_of_columns.py  no_borders.py  no_borders_no_headers.py  no_borders_preformatted_headers.py  no_headers.py  one.py  select_columns_two_and_five.py  six.py  specify_terminal_width.py  three.py  two.py  wide_characters.py  wide_characters_and_emojis.py
tests/: test_columnar.py
