# SPDX-FileCopyrightText: 2019 Max Taggart

# SPDX-License-Identifier: MIT

[metadata]
name = Columnar
version = 1.3.1
description = A tool for printing data in a columnar format.
long_description = file:README.md
long_description_content_type = text/markdown
author = Max Taggart
author_email = max.taggart@gmail.com
license = MIT
license_files =
    LICENSE.text
    LICENSES/*
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = ~= 3.7
install_requires =
    toolz
    wcwidth
